2007-07-24  mefyl  <mefyl@lrde.epita.fr>

	Reduce code duplication. Use strings instead of char*.
	* src/parser/uparser.cc,
	* src/parser/uparser.hh: Use std::string instead of char*.
          Add accessors for errors and warnings handling.
	* src/uconnection.cc,
	* src/uexpression.cc: Use the new interface for
          errors and warnings handling.

2007-07-24  Akim Demaille  <demaille@gostai.com>

	Add k2 tests
	* tests-local.mk (TESTS): Extend it.

2007-07-24  mefyl  <mefyl@lrde.epita.fr>

	Report "^" as "**" in the scanner.
	* src/parser/bison/utoken.l: Here.

2007-07-24  Guillaume Deslandes  <deslandes@gostai.com>

	* src/object/object-test-primitives.cc: Remove extra arg.
	* src/object/primitives.cc: Restore argument indexes.

2007-07-23  Guillaume Deslandes  <deslandes@gostai.com>

	Fix argument index for method calls in objects
	* src/object/object-test-primitives.cc: Here.
	* src/object/primitives.cc: Add target.

2007-07-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Add math primitives.
	* src/object/primitives.cc: Here.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	function name args body
	* src/parser/bison/ugrammar.y: Recognize it.
	* tests-local.mk, Makefile.am: Reactivate the tests.
	IT DOES NOT WORK WELL, because recent changes in tests/
	made it less robust.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	"Support" wait & noop
	* src/ast/ast.yml (YieldExp): Rename as...
	(Noop): this.
	* src/ast/all.hh: Adjust.
	* src/object/primitives.cc (object_class_wait): New.
	* src/parser/bison/ugrammar.y, src/parser/bison/utoken.l
	(wait): Store its symbol.
	Use it to implement it as a CallExp.
	Remove useless code.
	* src/uconnection.cc (execute): Display something only if there
	is something to display.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Fix again ast-nodes.mk generation
	* src/ast/Makefile.am: Use always the same name, with $(srcdir),
	so that Make realizes it must update it.
